--- a/AoC/AoC.Common/AoC.Common.csproj
+++ b/AoC/AoC.Common/AoC.Common.csproj
@@ -14,6 +14,12 @@
     <None Update="datasets\inputDay04.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="datasets\inputDay12.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="datasets\inputDay11.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="datasets\inputDay10.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
